Tests/CompilerTests/negative/invalid-annotation.diagnostics.expected
negative/invalid-annotation.hylo:3.2-4: error: extraneous whitespace between '@' and annotation identifier
@  blah
 ~~
negative/invalid-annotation.hylo:7.3-8: error: invalid annotation
  @blah let x: Void
  ~~~~~
negative/invalid-annotation.hylo:8.3-8: error: invalid annotation
  @blah type T = Void
  ~~~~~
negative/invalid-annotation.hylo:12.3-8: error: invalid annotation
  @blah type X
  ~~~~~
negative/invalid-annotation.hylo:15.1-6: error: invalid annotation
@blah extension Void {}
~~~~~
negative/invalid-annotation.hylo:17.1-6: error: invalid annotation
@blah given Void is P {}
~~~~~
negative/invalid-annotation.hylo:19.9-12: error: expected 'always' or 'never'
@inline(foo) fun f0() {}
        ~~~
negative/invalid-annotation.hylo:20.16-17: error: '@inline' accepts at most 1 argument
@inline(never, 1) fun f1() {}
               ^
